Refactor: Organize network-related classes into subpackages
- Moved `SshConnector` to `net.ssh` package
- Moved `ProxyPropertyKey` to `net.properties` package
- Moved `IPResolver` and `IPResolverTest` to `net.ip` package
- Moved `ShellExecutorTest` to `net.shell` package
- Moved `SocketExtensionsTest` to `net.socket` package
- Updated `module-info.java` to export new packages
- Added `DnsLookupExtensions` in `net.dns` package
- Added `IpInfoExtensions` in `net.ip` package with utility methods for IP information retrieval
- Deleted `lombok.config` and obsolete `package.html` file
- Improved `URLExtensionsTest` by replacing `new URL(...)` with `new URI(...).toURL()`